# localrepo

app-admin/pass/: Manifest  metadata.xml  pass-1.7.3.ebuild  pass-1.7.4-r1.ebuild  pass-1.7.4-r2.ebuild  pass-1.7.4_pre20210216-r1.ebuild  pass-9999.ebuild
app-admin/pass/files/: rofi.patch
app-misc/tomtom-sports-connect/: Manifest  tomtom-sports-connect-3.3.9.ebuild
app-misc/tomtom-sports-connect/files/: 90-tomtom-sports-connect.rules
dev-python/bsdiff4/: Manifest  bsdiff4-1.2.1.ebuild  bsdiff4-1.2.3.ebuild
games-action/minecraft-launcher/: Manifest
games-rpg/toontown-rewritten/: Manifest  toontown-rewritten-1.2.3.ebuild  toontown-rewritten-9999.ebuild
games-rpg/toontown-rewritten/files/: com.toontownrewritten.Launcher.desktop  setup.cfg  toontown-rewritten-frame.py.patch  toontown-rewritten-launcher.py.patch  toontown-rewritten-rm-envs.patch  toontown-rewritten-toontown.patch
media-libs/gst-plugins-base/: Manifest  gst-plugins-base-0.10.36-r2.ebuild
media-libs/gst-plugins-base/files/: gst-plugins-base-0.10.36-make43.patch
media-libs/gstreamer/: Manifest  gstreamer-0.10.36-r2.ebuild
media-sound/volctl/: Manifest  metadata.xml  volctl-0.6.3.ebuild  volctl-0.8.2.ebuild
net-im/discord-bin/: Manifest
x11-misc/polybar/: Manifest  polybar-9999.ebuild
x11-plugins/devour/: Manifest  devour-9999.ebuild
