[metadata]
name = ttr
version = 1.2.3
author = The Toontown Rewritten Team
author_email = support@toontownrewritten.com
description = A launcher for Toontown Rewritten
url = https://www.toontownrewritten.com/
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
package_dir = 
	= src
packages = find:
install_requires =
	PyQt5
	PyQtWebEngine
	requests
	bsdiff4
python_requires = >=3.7

[options.packages.find]
where = src

[egg_info]
tag_build = 
tag_date = 0